--- a/client/index.html
+++ b/client/index.html
@@ -40,6 +40,7 @@
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '831035846593611');
+    fbq('init', '742825665410650');
     fbq('track', 'PageView');
     </script>
     <!-- End Meta Pixel Code -->
